# metaboss_lib

./: .ammanrc.js  .gitignore  Cargo.toml  README.md  build_test.sh
.github/actions/install-amman/: action.yml
.github/workflow/: ci.yml
.github/workflows/: build.yml  ci.yml
src/: constants.rs  convert.rs  data.rs  lib.rs  nft.rs  transaction.rs
src/burn/: mod.rs
src/check/: mod.rs
src/decode/: errors.rs  mod.rs  rule_set.rs
src/delegate/: mod.rs
src/derive/: mod.rs
src/mint/: mod.rs
src/revoke/: mod.rs
src/snapshot/: errors.rs  mod.rs
src/transfer/: mod.rs
src/unverify/: collection.rs  creator.rs  mod.rs
src/update/: mod.rs
src/verify/: collection.rs  creator.rs  mod.rs
tests/: decode.rs
tests/data/: default_asset.json  default_pnft.json  testQERkoJFGYbJe7qcBM21UaXkLjkXLvzoa1HotjsP.json
tests/utils/: mod.rs
