[package]
name = "metaboss_lib"
version = "0.3.0"
edition = "2021"
description = "The core library for the metaboss cli."
repository = "https://github.com/samuelvanderwaal/metaboss_lib"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.52"
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint", "serde-feature"] }
retry = "1.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
solana-account-decoder = "1.10"
solana-client = "1.10"
solana-program = "1.10"
solana-sdk = "1.10"
spl-associated-token-account = "1.1"
spl-token = "3.2.0"
thiserror = "1.0.30"
