[package]
name = "metaboss_lib"
version = "0.17.1"
edition = "2021"
description = "The core library for the metaboss cli."
repository = "https://github.com/samuelvanderwaal/metaboss_lib"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.52"
borsh = { version = "~0.10.3" }
mpl-token-auth-rules = { version = "~1.4.3", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "3.1.0", features = ["serde"] }
retry = "1.3.0"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
solana-account-decoder = "~1.16.11"
solana-client = "~1.16.11"
solana-program = "~1.16.11"
solana-sdk = "~1.16.11"
spl-associated-token-account = "1.1"
spl-token = "3.2.0"
thiserror = "1.0.30"
