[package]
name = "metaboss_lib"
version = "0.24.0"
edition = "2021"
description = "The core library for the metaboss cli."
repository = "https://github.com/samuelvanderwaal/metaboss_lib"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.52"
borsh = { version = "~0.10.3" }
# mpl-token-auth-rules removed — incompatible with solana SDK 2.x (pinned to <1.19)
# AUTH_RULES_PROGRAM_ID constant is in constants.rs
# decode_rule_set functionality removed (depends on auth-rules types)
mpl-token-metadata = { version = "5.1.1", features = ["serde"] }
retry = "1.3.0"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
solana-account-decoder = "=2.3.1"
solana-client = "=2.3.1"
solana-program = "=2.3.0"
solana-sdk = "=2.3.1"
spl-associated-token-account = "~7.0"
spl-token = "~8.0"
thiserror = "1.0.30"
